# mini-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docker/: docker-compose-dev.yaml  docker-compose.yaml
src/: main.py
src/configs/: PydanticConfig.py  __init__.py  pydantic_config.py
src/controllers/: BaseController.py  DataController.py  ProcessController.py  ProjectController.py  __init__.py  base_controller.py  data_controller.py  process_controller.py  project_controller.py
src/enums/: ResponseEnum.py  __init__.py  asset_enum.py  response_enum.py
src/models/: __init__.py  asset_mode.py  chunk_model.py  project_model.py
src/models/project/: __init__.py  asset_name_and_id_project.py  asset_name_project.py  id_project.py  project_id_project.py
src/repositories/: __init__.py  asset_repo.py  base_repo.py  chunk_repo.py  project_repo.py
src/routes/: __init__.py  base.py  data.py
src/schemas/: ProcessSchema.py  __init__.py  process_schema.py
