[project]
name = "mini-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.139.2",
    "langchain-community>=0.4.2",
    "langchain-pymupdf4llm>=1.28.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
]
